--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "proxyServiceUrl": "",
   "permalinkServiceUrl": "http://localhost:5001/",
-  "elevationServiceUrl": "http://localhost:5002/",
+  "elevationServiceUrl": "/elevation",
   "mapInfoService":  "http://localhost:8093/",
   "featureReportService": "http://localhost:5020/",
   "translationsPath": "/translations",
@@ -51,6 +51,11 @@
       "code": "EPSG:25832",
       "proj": "+proj=utm +zone=32 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
       "label": "ETRS89 / UTM 32N"
+    },
+    {
+      "code": "EPSG:2154",
+      "proj": "+proj=lcc +lat_1=49 +lat_2=44 +lat_0=46.5 +lon_0=3 +x_0=700000 +y_0=6600000 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs",
+      "label": "RGF93 / Lambert-93"
     }
   ],
   "plugins": {
@@ -116,7 +121,7 @@
                 "minScaleDenom": 1000,
                 "showProviderSelection": true,
                 "providerSelectionAllowAll": true,
-                "zoomToLayers": false,
+                "zoomToLayers": true,
                 "showProvidersInPlaceholder": false
               },
               "appMenuClearsTask": true,
@@ -326,7 +331,7 @@
                 "minScaleDenom": 1000,
                 "showProviderSelection": true,
                 "providerSelectionAllowAll": true,
-                "zoomToLayers": false,
+                "zoomToLayers": true,
                 "showProvidersInPlaceholder": false
               },
               "appMenuClearsTask": true,
